--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quero Mais</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- <style>
         @import url(style.css);
     </style>  -->
 </head>
 <body>
     <header>
-       
         <nav class="navigation">
             <img src="img/LOGOTIPO - COXINHA.png" alt="LOGOTIPO" class="logotipo">
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#">Sobre</a></li>
-                <li class="nav-item"><a href="#"> Cardapio</a></li>
+                <li class="nav-item"><a href="cardapio.html"> Cardapio</a></li>
                 <li class="nav-item"><a href="#"> Promoções </a></li>
                 <li class="nav-item"><a href="#"> Cupons </a></li>
             </ul>
@@ -28,5 +27,14 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <div class="back-ground-main">
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, commodi dolorem! Unde ut ducimus soluta corporis obcaecati placeat aperiam quod dolor facilis laborum, iusto atque, nobis error quos animi, inventore quam ad temporibus tempora non sed ipsam rerum ullam similique? At corrupti consectetur tempora reprehenderit magni in culpa consequuntur esse.</p>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
