commit: update all

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
             <img src="img/LOGOTIPO - COXINHA.png" alt="LOGOTIPO" class="logotipo">
             <ul class="nav-menu">
-                <li class="nav-item"><a href="#">Sobre</a></li>
+                <li class="nav-item"><a href="sobre.html">Sobre</a></li>
                 <li class="nav-item"><a href="cardapio.html"> Cardapio</a></li>
                 <li class="nav-item"><a href="#"> Promoções </a></li>
                 <li class="nav-item"><a href="#"> Cupons </a></li>
